--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,8 @@
 \usepackage{colortbl}
 \newcommand{\hightlight}{\rowcolor[gray]{.95}}
 
+\usepackage{placeins}
+
 % Define el comando \cellcolorgray para aplicar sombreado a una celda
 \newcommand{\cellcolorgray}{\cellcolor{gray!25}}%Indice
 \renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % Agrega puntos para las secciones
